--- a/_layouts/it/home.html
+++ b/_layouts/it/home.html
@@ -10,8 +10,8 @@
         <!-- Wrapper for slides -->
             <div class="item active">
                 <div class="fill" style="background-image:url('../img/home_2.jpg');"></div>
-                <!--div class="carousel-caption">
-                    <h2>CoderBot, un robot programmabile orientato alla didattica</h2>
+				<!--div class="carousel-caption">
+                    <h2>CoderBot<br>Un bot per imparare a programmare</h2>
                 </div-->
             </div>
      </header>
@@ -25,5 +25,5 @@
 
     </div>
     <!-- /.container -->
-  </body>
+  </body>  
 </html>
