--- a/_layouts/en/home.html
+++ b/_layouts/en/home.html
@@ -11,7 +11,7 @@
             <div class="item active">
                 <div class="fill" style="background-image:url('../img/home_2.jpg');"></div>
                 <!--div class="carousel-caption">
-                    <h2>CoderBot, a programmable</h2>
+                    <h2>CoderBot<br>A Bot, for coders</h2>
                 </div-->
             </div>
      </header>
